--- a/style.css
+++ b/style.css
@@ -100,7 +100,7 @@
     /*    background: #f0f0f0;*/
     /*}*/
     #countdown {
-        width: 320px;
+        width: 100%;
         height: 60px;
         align-items: center;
         color: #fff;
